c3prj1_deck/grade.txt
Grading at Mon May 25 04:56:19 UTC 2020
Compiling deck.c
deck.c: In function ‘assert_full_deck’:
deck.c:43:24: error: expected identifier before ‘<’ token
   temp_deck.cards = d-><cards;
                        ^
In file included from deck.c:3:0:
deck.c:49:41: error: ‘temp_cards’ undeclared (first use in this function)
       assert(!deck_contains(&temp_deck, temp_cards));
                                         ^
deck.c:49:41: note: each undeclared identifier is reported only once for each function it appears in
deck.c:54:3: error: ISO C forbids nested functions [-Werror=pedantic]
   void add_card_to(deck_t * deck, card_t c){
   ^
deck.c:63:3: error: ISO C forbids nested functions [-Werror=pedantic]
   card_t * add_empty_card(deck_t * deck){
   ^
deck.c:73:3: error: ISO C forbids nested functions [-Werror=pedantic]
   deck_t * make_deck_exclude(deck_t * excluded_cards){
   ^
deck.c:90:3: error: ISO C forbids nested functions [-Werror=pedantic]
   deck_t * build_remaining_deck(deck_t ** hands, size_t n_hands){
   ^
deck.c:113:3: error: ISO C forbids nested functions [-Werror=pedantic]
   void free_deck(deck_t * deck){
   ^
deck.c:119:3: error: expected declaration or statement at end of input
   }
   ^
cc1: all warnings being treated as errors
Could not compile your deck.c!

Overall Grade: FAILED
